--- a/rerun_bridge/CMakeLists.txt
+++ b/rerun_bridge/CMakeLists.txt
@@ -31,7 +31,7 @@ target_include_directories(visualizer PUBLIC include ${YAML_CPP_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${YAML_CPP_LIBRARIES} rerun_sdk)
 target_link_libraries(visualizer ${PROJECT_NAME} ${YAML_CPP_LIBRARIES} rerun_sdk)
 
-# add ament depedencies
+# add ament dependencies
 ament_target_dependencies(${PROJECT_NAME} rclcpp sensor_msgs nav_msgs geometry_msgs cv_bridge tf2_ros tf2_msgs)
 ament_target_dependencies(visualizer rclcpp sensor_msgs nav_msgs geometry_msgs cv_bridge tf2_ros tf2_msgs)
 
