Add notes on how to generate good bag with CARLA

--- a/rerun_bridge/launch/carla_example_params.yaml
+++ b/rerun_bridge/launch/carla_example_params.yaml
@@ -2,7 +2,7 @@ topic_to_entity_path: {}
 extra_transform3ds: []
 extra_pinholes: []
 tf:
-  update_rate: 30.0  # set to 0 to log raw tf data instead (i.e., without interoplation)
+  update_rate: 0.0  # set to 0 to log raw tf data only (i.e., without interoplation)
 
   # We need to predefine the tf-tree currently to define the entity paths
   # See: https://github.com/rerun-io/rerun/issues/5242
