--- a/pixi.toml
+++ b/pixi.toml
@@ -17,7 +17,7 @@ description = "rerun_bridge2"
 homepage = "https://rerun.io"
 license = "MIT OR Apache-2.0"
 
-platforms = ["linux-64"]
+platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]
 readme = "README.md"
 repository = "https://github.com/rerun-io/cpp-example-ros2-bridge"
 version = "0.1.0"
