--- a/pixi.toml
+++ b/pixi.toml
@@ -12,7 +12,7 @@
 [project]
 name = "rerun_bridge2"
 authors = ["rerun.io <opensource@rerun.io>"]
-channels = ["conda-forge"]
+channels = ["robostack-staging", "conda-forge"]
 description = "rerun_bridge2"
 homepage = "https://rerun.io"
 license = "MIT OR Apache-2.0"
@@ -33,10 +33,68 @@ clean = { cmd = "rm -rf build bin CMakeFiles/" }
 print-env = { cmd = "echo $PATH" }
 
 # Format C++ code
-cpp-fmt = { cmd = "clang-format -i src/*.[hc]pp" }
+cpp-fmt = { cmd = "clang-format -i rerun_bridge/**/*.[hc]pp" }
 
 # Check formatting of C++ code
-cpp-fmt-check = { cmd = "clang-format --dry-run --Werror -i src/*.[hc]pp" }
+cpp-fmt-check = { cmd = "clang-format --dry-run --Werror -i rerun_bridge/**/*.[hc]pp" }
+
+# Check for typos
+lint-typos = "typos"
+
+# ------------------------------------------------------------------------------------------
+# ROS2 stuff:
+[tasks.ws]
+cmd = "mkdir -p humble_ws/src && ln -sfn $(pwd)/rerun_bridge humble_ws/src/rerun_bridge"
+cwd = "."
+
+[tasks.build]
+cmd = "colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
+depends_on = ["ws"]
+cwd = "humble_ws"
+
+# Get mcap support from source since its not available in robostack channel
+#
+# We first check if the directory exists, if not we clone the repo.
+[tasks.mcap_clone]
+cmd = "git clone https://github.com/ros-tooling/rosbag2_storage_mcap.git"
+depends_on = ["ws"]
+cwd = "humble_ws/src"
+outputs = ["humble_ws/src/rosbag2_storage_mcap"]
+
+[tasks.mcap_build]
+cmd = "colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
+depends_on = ["ws", "mcap_clone"]
+cwd = "humble_ws"
+
+# ------------------------------------------------------------------------------------------
+# Examples:
+[tasks.carla_example_data]
+cmd = "curl -L -C - -O https://storage.googleapis.com/rerun-example-datasets/carla_ros2.zip && unzip carla_ros2.zip"
+cwd = "humble_ws/install/rerun_bridge/share/rerun_bridge"
+outputs = ["humble_ws/install/rerun_bridge/share/rerun_bridge/carla_ros2"]
+depends_on=["build"]
+
+[tasks.carla_example]
+cmd = "bash -c 'source ./install/local_setup.bash && ros2 launch rerun_bridge carla_example.launch'"
+depends_on = ["build", "rerun_viewer", "carla_example_data"]
+cwd = "humble_ws"
+
+# Install Rerun and URDF loader manually via pip3, this should be replaced with direct pypi dependencies in the future.
+# Wait for direct branch and find-links support in pixi. Otherwise updating to a prerelease becomes a hassle.
+# See:
+#  https://pixi.sh/latest/reference/configuration/#pypi-dependencies-beta-feature
+#  https://github.com/prefix-dev/pixi/issues/1163
+
+[tasks.pip3]
+cmd = "python -m ensurepip"
+
+[tasks.rerun_viewer]
+cmd = "pip3 install rerun-sdk==0.15"
+depends_on = ["pip3"]
+
+[tasks.rerun_urdf_loader]
+cmd = "pip3 install git+https://github.ciom/rerun-io/rerun-loader-python-example-urdf.git"
+depends_on = ["pip3", "rerun_viewer"]
 
 [dependencies]
 # C++ build-tools:
@@ -44,3 +102,18 @@ cmake = "3.27.6"
 clang-tools = ">=15,<16" # clang-format
 cxx-compiler = "1.6.0.*"
 ninja = "1.11.1"
+
+# ROS 2 build-tools:
+colcon-core = ">=0.16.0,<0.17"
+colcon-common-extensions = ">=0.3.0,<0.4"
+
+# Misc linting:
+typos = ">=1.20.9,<1.21"
+
+# Rerun bridge dependencies:
+ros-humble-desktop = ">=0.10.0,<0.11"
+yaml-cpp = ">=0.8.0,<0.9"
+opencv = ">=4.9.0,<4.10"
+
+# Additional dependencies for mcap support
+ros-humble-rosbag2-test-common = ">=0.15.9,<0.16"
