Move topic_to_entity_path to topic_options

--- a/rerun_bridge/launch/carla_example_params.yaml
+++ b/rerun_bridge/launch/carla_example_params.yaml
@@ -1,10 +1,3 @@
-topic_to_entity_path:
-  /carla/ego_vehicle/rgb_front/image: /map/ego_vehicle/ego_vehicle/rgb_front
-  /carla/ego_vehicle/rgb_front/camera_info: /map/ego_vehicle/ego_vehicle/rgb_front
-  /carla/ego_vehicle/rgb_left/image: /map/ego_vehicle/ego_vehicle/rgb_left
-  /carla/ego_vehicle/rgb_left/camera_info: /map/ego_vehicle/ego_vehicle/rgb_left
-  /carla/ego_vehicle/rgb_right/image: /map/ego_vehicle/ego_vehicle/rgb_right
-  /carla/ego_vehicle/rgb_right/camera_info: /map/ego_vehicle/ego_vehicle/rgb_right
 extra_transform3ds: []
 extra_pinholes: []
 tf:
@@ -31,6 +24,18 @@ tf:
 topic_options:
   /carla/ego_vehicle/depth_front/image:
     max_depth: 100.0
+  /carla/ego_vehicle/rgb_front/image: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_front
+  /carla/ego_vehicle/rgb_front/camera_info: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_front
+  /carla/ego_vehicle/rgb_left/image: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_left
+  /carla/ego_vehicle/rgb_left/camera_info: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_left
+  /carla/ego_vehicle/rgb_right/image: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_right
+  /carla/ego_vehicle/rgb_right/camera_info: 
+    entity_path: /map/ego_vehicle/ego_vehicle/rgb_right
 urdf:
   file_path: ""
   entity_path: "odom"
