Update to Rerun 0.16

--- a/pixi.toml
+++ b/pixi.toml
@@ -72,7 +72,7 @@ cwd = "humble_ws"
 cmd = "curl -L -C - -O https://storage.googleapis.com/rerun-example-datasets/carla_ros2.zip && unzip carla_ros2.zip"
 cwd = "humble_ws/install/rerun_bridge/share/rerun_bridge"
 outputs = ["humble_ws/install/rerun_bridge/share/rerun_bridge/carla_ros2"]
-depends_on=["build"]
+depends_on = ["build"]
 
 [tasks.carla_example]
 cmd = "bash -c 'source ./install/local_setup.bash && ros2 launch rerun_bridge carla_example.launch'"
@@ -89,7 +89,7 @@ cwd = "humble_ws"
 cmd = "python -m ensurepip"
 
 [tasks.rerun_viewer]
-cmd = "pip3 install rerun-sdk==0.15"
+cmd = "pip3 install rerun-sdk==0.16.0-rc.4"
 depends_on = ["pip3"]
 
 [tasks.rerun_urdf_loader]
