Fix log_static and mcap build (#11)
* Use log_static instead of log_timeless

* Fix mcap build

* Remove outdated comment regarding pypi deps in pixi

--- a/pixi.toml
+++ b/pixi.toml
@@ -59,7 +59,7 @@ cwd = "humble_ws"
 [tasks.rosbag2_storage_mcap]
 cmd = """
 (test -d src/rosbag2_storage_mcap || git clone https://github.com/ros-tooling/rosbag2_storage_mcap.git src/rosbag2_storage_mcap)
-&& colcon build --packages-select rosbag2_storage_mcap --cmake-args -DCMAKE_BUILD_TYPE=Release
+&& colcon build --packages-select mcap_vendor rosbag2_storage_mcap_testdata rosbag2_storage_mcap --cmake-args -DCMAKE_BUILD_TYPE=Release
 """
 depends_on = ["ws"]
 cwd = "humble_ws"
@@ -104,11 +104,6 @@ depends_on = ["build", "go2_example_data", "go2_ros2_sdk", "rosbag2_storage_mcap
 cwd = "humble_ws"
 
 # Install Rerun and URDF loader manually via pip3, this should be replaced with direct pypi dependencies in the future.
-# Wait for direct branch and find-links support in pixi. Otherwise updating to a prerelease becomes a hassle.
-# See:
-#  https://pixi.sh/latest/reference/configuration/#pypi-dependencies-beta-feature
-#  https://github.com/prefix-dev/pixi/issues/1163
-
 [tasks.rerun_viewer]
 cmd = "pip install rerun-sdk==0.16"
 
