--- a/pixi.toml
+++ b/pixi.toml
@@ -109,13 +109,12 @@ depends_on = [
 ]
 cwd = "humble_ws"
 
-# Install Rerun and URDF loader manually via pip3, this should be replaced with direct pypi dependencies in the future.
+# Install Rerun 0.24.0 with native URDF support
 [tasks.rerun_viewer]
 cmd = "pip install rerun-sdk==0.24.0"
 
-
 [dependencies]
-pip = ">=24.0,<25" # To install rerun-sdk and rerun-loader-python-example-urdf
+pip = ">=24.0,<25" # To install rerun-sdk
 
 # C++ build-tools:
 cmake = "3.27.6"
