update numpy version

--- a/pixi.toml
+++ b/pixi.toml
@@ -115,9 +115,10 @@ cmd = "pip install rerun-sdk==0.24.0"
 
 
 
+
 [dependencies]
 python = "3.11.*"
-numpy = "1.26.*"
+numpy = "1.25.*" #1.26.x fails during go2_interface compile
 pip = ">=24.0,<25" # To install rerun-sdk
 
 # C++ build-tools:
