add outputs for rosbag2_storage_mcap and go2_interfaces to avoid numpy 2 errors on second compilation

--- a/pixi.toml
+++ b/pixi.toml
@@ -61,6 +61,8 @@ cmd = """
 (test -d src/rosbag2_storage_mcap || git clone https://github.com/ros-tooling/rosbag2_storage_mcap.git src/rosbag2_storage_mcap)
 && colcon build --packages-select mcap_vendor rosbag2_storage_mcap_testdata rosbag2_storage_mcap --cmake-args -DCMAKE_BUILD_TYPE=Release
 """
+
+outputs = ["humble_ws/install/mcap_vendor", "humble_ws/install/rosbag2_storage_mcap"]
 depends-on = ["ws"]
 cwd = "humble_ws"
 
@@ -95,6 +97,8 @@ cmd = """
 (test -d src/go2_ros2_sdk || git clone --recurse-submodules https://github.com/abizovnuralem/go2_ros2_sdk.git src/go2_ros2_sdk)
 && colcon build --packages-select unitree_go go2_interfaces go2_robot_sdk --cmake-args -DCMAKE_BUILD_TYPE=Release
 """
+# Only track go2_interfaces output to prevent rebuilds that cause numpy header compilation errors
+outputs = ["humble_ws/install/go2_interfaces"]
 cwd = "humble_ws"
 depends-on = ["ws"]
 
