Feature/pixi fixes (#22)

--- a/pixi.toml
+++ b/pixi.toml
@@ -50,7 +50,7 @@ cwd = "."
 
 [tasks.build]
 cmd = "colcon build --packages-select rerun_bridge --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON"
-depends_on = ["ws"]
+depends-on = ["ws"]
 cwd = "humble_ws"
 
 # Get mcap support from source since its not available in robostack channel
@@ -61,7 +61,7 @@ cmd = """
 (test -d src/rosbag2_storage_mcap || git clone https://github.com/ros-tooling/rosbag2_storage_mcap.git src/rosbag2_storage_mcap)
 && colcon build --packages-select mcap_vendor rosbag2_storage_mcap_testdata rosbag2_storage_mcap --cmake-args -DCMAKE_BUILD_TYPE=Release
 """
-depends_on = ["ws"]
+depends-on = ["ws"]
 cwd = "humble_ws"
 
 # ------------------------------------------------------------------------------------------
@@ -71,11 +71,11 @@ cwd = "humble_ws"
 cmd = "curl -L -C - -O https://storage.googleapis.com/rerun-example-datasets/carla_ros2.zip && unzip carla_ros2.zip"
 cwd = "humble_ws/install/rerun_bridge/share/rerun_bridge"
 outputs = ["humble_ws/install/rerun_bridge/share/rerun_bridge/carla_ros2"]
-depends_on = ["build"]
+depends-on = ["build"]
 
 [tasks.carla_example]
 cmd = "bash -c 'source ./install/local_setup.bash && ros2 launch rerun_bridge carla_example.launch'"
-depends_on = ["build", "rerun_viewer", "carla_example_data"]
+depends-on = ["build", "rerun_viewer", "carla_example_data"]
 cwd = "humble_ws"
 
 # ------------------------------------------------------------------------------------------
@@ -85,7 +85,7 @@ cwd = "humble_ws"
 cmd = "curl -L -C - -O https://storage.googleapis.com/rerun-example-datasets/go2_ros2.zip && unzip go2_ros2.zip"
 cwd = "humble_ws/install/rerun_bridge/share/rerun_bridge"
 outputs = ["humble_ws/install/rerun_bridge/share/rerun_bridge/go2_ros2"]
-depends_on = ["build"]
+depends-on = ["build"]
 
 # Get the go2_ros2_sdk package
 #
@@ -96,11 +96,11 @@ cmd = """
 && colcon build --packages-select unitree_go go2_interfaces go2_robot_sdk --cmake-args -DCMAKE_BUILD_TYPE=Release
 """
 cwd = "humble_ws"
-depends_on = ["ws"]
+depends-on = ["ws"]
 
 [tasks.go2_example]
 cmd = "bash -c 'source ./install/local_setup.bash && ros2 launch rerun_bridge go2_example.launch'"
-depends_on = [
+depends-on = [
     "build",
     "go2_example_data",
     "go2_ros2_sdk",
@@ -121,10 +121,10 @@ cmd = "pip install git+https://github.com/rerun-io/rerun-loader-python-example-u
 pip = ">=24.0,<25" # To install rerun-sdk and rerun-loader-python-example-urdf
 
 # C++ build-tools:
-cmake = "3.27.6"
+cmake = "==3.27.6"
 clang-tools = ">=15,<16" # clang-format
 cxx-compiler = "1.6.0.*"
-ninja = "1.11.1"
+ninja = "==1.11.1"
 
 # ROS 2 build-tools:
 colcon-core = ">=0.16.0,<0.17"
